# grpc-starter

./: .gitignore  BUILD.bazel  Gopkg.toml  README.md  WORKSPACE  envvars.sh.default
auth/: BUILD.bazel  auth.go
proto/api/: BUILD.bazel  api.proto  cashcoach_api.pb.go  cashcoach_api.proto
server/: .gitignore  BUILD.bazel  Dockerfile  README.md  make-container.sh  make_localhost_cert.sh  push-image.sh  server.go
terraform/prod/: container-manifest.yaml  main.tf  provider.tf  variables.tf
