load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/pcarleton/grpc-starter/server",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/api:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
